--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,9 @@ header h2 {
   color: #cec8ff;
 }
 
-footer {
-  background-image: linear-gradient(#cec8ff, white);
-  padding: 20px 0;
+.site-footer{
+    background-image: linear-gradient(#CEC8FF, white);
+    padding: 20px 0;
 }
 
 .jumbotron {
