--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ header h2 {
 }
 
 .site-footer{
-    background-image: linear-gradient(#CEC8FF, white);
+    background-color:#CEC8FF;
     padding: 20px 0;
 }
 
@@ -48,4 +48,24 @@ a, a:hover {
 
 .carousel {
   border: solid #5637DD;
+}
+
+.card-bkgrnd-purple {
+  background-color: #901CAD;
+}
+
+.card-bkgrnd-lav {
+  background-color:rgba(144, 28, 173, 0.5);
+}
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
+.card-title {
+  font-family: 'Lobster', cursive;
+  font-size:24px;
 }
