Bootstrap and jQuery Part 1

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,13 @@ a, a:hover {
   border: solid #5637DD;
 }
 
+#carouselButton{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+}
+
 .card-bkgrnd-purple {
   background-color: #901CAD;
 }
