--- a/css/styles.css
+++ b/css/styles.css
@@ -1,78 +1,48 @@
 body {
-  font-family: "Open Sans", sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
-h1,
-h2,
-h3 {
-  font-family: "Lobster", cursive;
-}
+h1, h2, h3 {
+  font-family: "Lobster", cursive; }
 
 h2 {
-  color: #3046c5;
-}
+  color: #3046C5; }
 
 header h2 {
-  color: #cec8ff;
-}
+  color: #CEC8FF; }
 
-.site-footer{
-    background-color:#CEC8FF;
-    padding: 20px 0;
-}
+.site-footer {
+  background-image: linear-gradient(#CEC8FF, white);
+  padding: 20px 0; }
 
 .jumbotron {
   margin: 0;
   padding: 30px;
-  background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
-  color: white;
-}
+  background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
+  color: white; }
 
 .row-content {
   padding: 50px 0;
   border-bottom: 1px ridge;
-  min-height: 200px;
-}
+  min-height: 200px; }
 
 .navbar-dark {
-  background-color: #901CAD;
-}
+  background-color: #901CAD; }
 
 a, a:hover {
   color: inherit;
-  text-decoration: none;
-}
-.carousel-caption {
-  background-color: rgba(0, 0, 0, 0.5);
-}
+  text-decoration: none; }
+
+.navbar {
+  background-color: #901CAD; }
 
 .carousel {
-  border: solid #5637DD;
-}
+  border: solid #5637dd; }
 
-#carouselButton{
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5); }
+
+#carouselButton {
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index:100;
-}
-
-.card-bkgrnd-purple {
-  background-color: #901CAD;
-}
-
-.card-bkgrnd-lav {
-  background-color:rgba(144, 28, 173, 0.5);
-}
-.card-columns {
-  @include media-breakpoint-only(lg) {
-    column-count: 4;
-  }
-  @include media-breakpoint-only(xl) {
-    column-count: 5;
-  }
-}
-.card-title {
-  font-family: 'Lobster', cursive;
-  font-size:24px;
-}
+  z-index: 100; }
