--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,4 @@
-$color-primary: orange;
+$color-primary: #3046C5;
 $color-secondary: #5637dd;
 $color-pale: #CEC8FF;
 $color-mid: #901CAD;
@@ -7,8 +7,6 @@ $color-black-transparent: rgba(0, 0, 0, 0.5);
 
 $body-font: "Open Sans", sans-serif;
 $header-font: "Lobster", cursive;
-
-
 
 body {
     font-family: $body-font;
@@ -28,7 +26,10 @@ header {
     }
 }
 
-
+.site-footer {
+    background-image: linear-gradient($color-pale, white);
+    padding: 20px 0;
+}
 
 .jumbotron {
     margin: 0;
@@ -36,11 +37,21 @@ header {
     background-image: linear-gradient(to right, $color-secondary, $color-primary, $color-dark);
     color: white;
 }
+
   
   .row-content {
     padding: 50px 0;
     border-bottom: 1px ridge;
     min-height: 200px;
+  }
+  
+  .navbar-dark {
+    background-color: #901CAD;
+  }
+  
+  a, a:hover {
+    color: inherit;
+    text-decoration: none;
   }
   .navbar {
     background-color: $color-mid;
@@ -53,38 +64,12 @@ header {
 .carousel-caption {
     background-color: $color-black-transparent;
 }
-  .navbar-dark {
-    background-color: #901CAD;
-  }
   
-  a, a:hover {
-    color: inherit;
-    text-decoration: none;
-  }
-    
   #carouselButton{
     position: absolute;
     right: 0;
     bottom: 0;
-    z-index: 100;
+    z-index:100;
   }
   
-  .card-bkgrnd-purple {
-    background-color: #901CAD;
-  }
   
-  .card-bkgrnd-lav {
-    background-color:rgba(144, 28, 173, 0.5);
-  }
-  .card-columns {
-    @include media-breakpoint-only(lg) {
-      column-count: 4;
-    }
-    @include media-breakpoint-only(xl) {
-      column-count: 5;
-    }
-  }
-  .card-title {
-    font-family: 'Lobster', cursive;
-    font-size:24px;
-  }
