--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,7 @@ $color-pale: #CEC8FF;
 $color-mid: #901CAD;
 $color-dark: #60106b;
 $color-black-transparent: rgba(0, 0, 0, 0.5);
+$color-teal: #17A2B8;
 
 $body-font: "Open Sans", sans-serif;
 $header-font: "Lobster", cursive;
@@ -39,17 +40,17 @@ header {
 }
 
   
-  .row-content {
+.row-content {
     padding: 50px 0;
     border-bottom: 1px ridge;
     min-height: 200px;
   }
   
-  .navbar-dark {
+.navbar-dark {
     background-color: #901CAD;
   }
   
-  a, a:hover {
+a, a:hover {
     color: inherit;
     text-decoration: none;
   }
@@ -65,11 +66,24 @@ header {
     background-color: $color-black-transparent;
 }
   
-  #carouselButton{
+#carouselButton{
     position: absolute;
     right: 0;
     bottom: 0;
     z-index:100;
+}
+
+#reserveModal {
+  .modal-header {
+      background-color: $color-teal;
+      color: white;
   }
-  
+}  
+
+#loginModal {
+  .modal-header {
+      background-color: $color-mid;
+      color: white;
+  }
+} 
   
